--- a/course.yml
+++ b/course.yml
@@ -1,4 +1,4 @@
-title: Course Title Here
-description: A description of the course.
+title: Survey Sampling
+description: This is a course of Survey Sampling.
 programming_language: r
 from: 'r-base-prod:30'
